@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.11 2005-03-16 15:55:28 achu Exp $
+## $Id: Makefile.am,v 1.12 2005-03-16 20:52:04 achu Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
@@ -27,6 +27,7 @@ cerebrod_SOURCES = cerebrod.c \
 		   cerebrod_util.c
 cerebrod_CFLAGS = -I$(srcdir)/../libcommon \
 		  -DCEREBROD_MODULE_DIR=\"$(pkglibdir)\"
+cerebrod_LDFLAGS = -export-dynamic
 cerebrod_LDADD = ../libcommon/libcommon.la
 
 if WITH_GENDERSLLNL
@@ -48,22 +49,18 @@ MODULE_FLAGS = -module -avoid-version
 cerebrod_clusterlist_gendersllnl_la_SOURCES = cerebrod_clusterlist_gendersllnl.c
 cerebrod_clusterlist_gendersllnl_la_LDFLAGS = $(MODULE_FLAGS) $(GENDERSLLNL_LIBS)
 cerebrod_clusterlist_gendersllnl_la_CFLAGS = -I$(srcdir)/../libcommon
-cerebrod_clusterlist_gendersllnl_la_LIBADD = ../libcommon/libcommon.la
 
 cerebrod_clusterlist_genders_la_SOURCES = cerebrod_clusterlist_genders.c
 cerebrod_clusterlist_genders_la_LDFLAGS = $(MODULE_FLAGS) $(GENDERS_LIBS)
 cerebrod_clusterlist_genders_la_CFLAGS = -I$(srcdir)/../libcommon
-cerebrod_clusterlist_genders_la_LIBADD = ../libcommon/libcommon.la
 
 cerebrod_clusterlist_hostsfile_la_SOURCES = cerebrod_clusterlist_hostsfile.c
 cerebrod_clusterlist_hostsfile_la_LDFLAGS = $(MODULE_FLAGS)
 cerebrod_clusterlist_hostsfile_la_CFLAGS = -I$(srcdir)/../libcommon
-cerebrod_clusterlist_hostsfile_la_LIBADD = ../libcommon/libcommon.la
 
 cerebrod_clusterlist_none_la_SOURCES = cerebrod_clusterlist_none.c
 cerebrod_clusterlist_none_la_LDFLAGS = $(MODULE_FLAGS)
 cerebrod_clusterlist_none_la_CFLAGS = -I$(srcdir)/../libcommon
-cerebrod_clusterlist_none_la_LIBADD = ../libcommon/libcommon.la
 
 ../libcommon/libcommon.la : force-dependency-check
 	@cd `dirname $@` && make `basename $@`
