@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebrod_clusterlist_genders.c,v 1.3 2005-03-14 23:46:02 achu Exp $
+ *  $Id: cerebrod_clusterlist_genders.c,v 1.4 2005-03-16 20:52:04 achu Exp $
 \*****************************************************************************/
 
 #if HAVE_CONFIG_H
@@ -162,7 +162,7 @@ genders_clusterlist_numnodes(void)
 int
 genders_clusterlist_node_in_cluster(char *node)
 {
-  int ret;
+  int ret, free_flag = 0;
   char *nodePtr = NULL;
 
   assert(handle);
@@ -175,6 +175,7 @@ genders_clusterlist_node_in_cluster(char *node)
       nodePtr = Strdup(node);
       p = strchr(nodePtr, '.');
       *p = '\0';
+      free_flag++;
     }
   else
     nodePtr = node;
@@ -183,7 +184,8 @@ genders_clusterlist_node_in_cluster(char *node)
     err_exit("genders_clusterlist_node_in_cluster: genders_isnode: %s",
 	     genders_errormsg(handle));
 
-  Free(nodePtr);
+  if (free_flag)
+    Free(nodePtr);
 
   return ret;
 }
